Fix bug: turbo form dissappear when hover the autocomplete options

--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -28,12 +28,12 @@
 
       <div>
         <%= form.label :cover_url, "Cover URL (recommended over uploaded cover)",  style: "display: block"  %>
-        <%= form.text_field :cover_url %>
+        <%= form.text_field :cover_url, autocomplete: "off" %>
       </div>
 
       <div>
         <%= form.label :name, style: "display: block" %>
-        <%= form.text_field :name %>
+        <%= form.text_field :name, autocomplete: "off" %>
       </div>
 
       <div>
