--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -2,7 +2,7 @@
   <div id="<%= dom_id pin %>" class= "pin_display">
     <p class = "pin_img">
       <% if pin.image_url.present? %>
-        <%= link_to image_tag(pin.image_url, style: 'width: 508px; height: auto;'), pin.image_url , data: { turbo_frame: "_top" } %>
+        <%= link_to image_tag(pin.image_url, style: 'max-width: 508px; max-height: 760px; object-fit: cover;'), pin.image_url , data: { turbo_frame: "_top" } %>
       <% else %>
         <%= link_to image_tag(pin.resize_img(pin.image, 508, 760)), pin.image if pin.image.attached? %>
       <% end %>
