--- a/app/views/boards/create.turbo_stream.erb
+++ b/app/views/boards/create.turbo_stream.erb
@@ -1,6 +1,6 @@
 <% open_boards, closed_boards = filter_options(@pin, current_user, current_user.boards) %>
 <%= turbo_stream.replace "board_id" do %>
-  <%= render partial: "pins/select_tag", locals: { open_boards: open_boards, closed_boards: closed_boards, new_board_id: @new_board_id, new_board_name: @new_board_name } %>
+  <%= render partial: "pins/select_tag", locals: { open_boards: open_boards, closed_boards: closed_boards, new_board_id: @board.id, new_board_name: @board.name } %>
 <% end %>
 
 <%= turbo_stream.replace "new_board" do %>
@@ -8,5 +8,5 @@
 <% end %>
 
 <%= turbo_stream.replace "all-boards" do %>
-  <%= render partial: "shared/all_boards", locals: {boards: @boards, user: @user} %>
+  <%= render partial: "shared/all_boards", locals: {boards: @user.boards, user: @user} %>
 <% end %>
