--- a/app/views/saved_pins/update.turbo_stream.erb
+++ b/app/views/saved_pins/update.turbo_stream.erb
@@ -1,3 +1,5 @@
 <%= turbo_stream.remove "box_#{dom_id(@pin)}" %>
 
-
+<%= turbo_stream.replace "#{ dom_id(@saved_pin.board) }" do %>
+  <%= render partial: "saved/board_thumbnail", locals: {board: @saved_pin.board, user: @saved_pin.user} %>
+<% end %>
