--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: [pin, note]) do |form| %>
   <% if note.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(note.errors.count, "error") %> prohibited this note from being saved:</h2>
+      <div><%= pluralize(note.errors.count, "error") %> prohibited this note from being saved:</div>
 
       <ul>
         <% note.errors.each do |error| %>
