--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -207,7 +207,10 @@ label {
 }
 a {
   display: inline-block;
-  padding: 0.25rem;
+  padding: 0.25rem 0;
+}
+.one-line-container a {
+  padding: 0.25rem
 }
 .m2 {
   margin-top: 2rem;
