--- a/app/views/boards/_privacy_change.html.erb
+++ b/app/views/boards/_privacy_change.html.erb
@@ -1,8 +1,7 @@
 <%= turbo_frame_tag("#{dom_id(board)}_privacy_change") do %>
-  <% new_privacy = board.keep_secret ? false : true %>
-  <% next_state = new_privacy ? "Public" : "Only You" %>
   <div class="one-line-container">
     <div>Who can see this board:</div>
-    <div><%= button_to next_state, user_board_path(board.user, board, board: {keep_secret: new_privacy}), method: :patch %> </div>
+    <% next_state = toggle_privacy_state(board) %>
+    <%= button_to next_state, user_board_path(board.user, board, board: { keep_secret: !board.keep_secret }), method: :patch %>
   </div>  
 <% end %>
