--- a/app/views/boards/create.turbo_stream.erb
+++ b/app/views/boards/create.turbo_stream.erb
@@ -1,6 +1,11 @@
-<% open_boards, closed_boards = filter_options(@pin, current_user, current_user.boards) %>
 <%= turbo_stream.replace "board_id" do %>
-  <%= render partial: "pins/select_tag", locals: { open_boards: open_boards, closed_boards: closed_boards, new_board_id: @board.id, new_board_name: @board.name } %>
+  <% open_boards, closed_boards = filter_options(@pin, current_user, current_user.boards) %>
+  
+  <%= render partial: "pins/select_tag",
+             locals: { open_boards: open_boards, 
+                       closed_boards: closed_boards, 
+                       new_board_id: @board.id, 
+                       new_board_name: @board.name } %>
 <% end %>
 
 <%= turbo_stream.replace "new_board" do %>
