--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -4,14 +4,13 @@
   
     <%= render partial: "boards/form", 
       locals: {board: @board, 
-               pin_id: defined?(@pin_id) ? @pin_id : nil, 
+               pin_id: @pin_id,
                in_saved_pin_mode: @in_saved_pin_mode,
-               cancel_form: @cancel_form} %>
-  
+               cancel_form: @cancel_form} %>  
     <br>
   
     <div>
-      <%= link_to "Back to boards", user_boards_path(current_user) %>
+      <%= link_to "Personal Space", user__saved_index_path(current_user) %>
     </div>
   </div>
 </div>
