--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -3,17 +3,7 @@
 <% else %>
   <%= turbo_frame_tag "new_board" do %>
     <%= form_with(model: [current_user, board]) do |form| %>
-      <% if board.errors.any? %>
-        <div style="color: red">
-          <h2><%= pluralize(board.errors.count, "error") %> prohibited this board from being saved:</h2>
-
-          <ul>
-            <% board.errors.each do |error| %>
-              <li><%= error.full_message %></li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
+      <%= render partial: "shared/errors_notification", locals: { resource: board } %>
 
       <% if defined?(pin_id) && pin_id != nil %>
         <%= hidden_field_tag :pin_id, pin_id %>
