--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -3,16 +3,7 @@
   <%= render "shared/flash" %>
 
   <%= form_with(model: [current_user, @board]) do |form| %>
-    <% if @board.errors.any? %>
-      <div class="errors">
-        <h2><%= pluralize(@board.errors.count, "error") %> prohibited this board from being saved:</h2>
-        <ul>
-          <% @board.errors.each do |error| %>
-            <li><%= error.full_message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
+    <%= render partial: "shared/errors_notification", locals: { resource: @board } %>
     
     <div class="form-group">
       <%= form.label :cover, "Upload Cover" %>
