--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -12,17 +12,7 @@
 <% else %>
   <%= turbo_frame_tag("#{dom_id(@comment)}_body") do %>
     <%= form_with(model: [@pin, @comment]) do |form| %>
-      <% if @comment.errors.any? %>
-        <div style="color: red">
-          <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
-          <ul>
-            <% @comment.errors.each do |error| %>
-              <li><%= error.full_message %></li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
+      <%= render partial: "shared/errors_notification", locals: { resource: @comment } %>
 
       <div>
         <%= form.text_area :body %>
