--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,3 +1,6 @@
 <%= turbo_frame_tag(@turbo_frame_id) do %>
-  <%= render partial: "comments/form", locals: {pin: @pin, comment: @comment, cancel_form: @cancel_form} %>
+  <%= render partial: "comments/form", 
+             locals: { pin: @pin, 
+                       comment: @comment, 
+                       cancel_form: @cancel_form } %>
 <% end %>
