--- a/app/views/pins/_edit_form.html.erb
+++ b/app/views/pins/_edit_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_with(model: pin) do |form| %>
-  <% if pin.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
-
-      <ul>
-        <% pin.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render partial: "shared/errors_notification", locals: { resource: pin } %>
 
   <div>
     <%= form.label :image, "Upload Image",  style: "display: block" %>
