--- a/app/views/comments/create.turbo_stream.erb
+++ b/app/views/comments/create.turbo_stream.erb
@@ -1,22 +1,22 @@
-<% if @comment.parent_id == nil %>
+<% if @comment.pin_comment? %>
+  <%# adding the new comment to the top of comments list %>
   <%= turbo_stream.prepend "#{dom_id(@pin)}_show_all_comments" do %>
     <%= render partial: "shared/comment_short", locals: {pin: @pin, comment: @comment} %>
   <% end %>
 
-  <%= turbo_stream.update "comment-empty", "" %>
-
+  <%# clear the add comment section %>
   <%= turbo_stream.update "add-comment" do %>
-    <%= render partial: "comments/form", locals: {pin: @pin, comment: @pin.comments.build, not_show_cancel_button: true} %>
+    <%= render partial: "comments/form", locals: {pin: @pin, comment: @pin.comments.build, cancel_form: false, not_show_cancel_button: true} %>
   <% end %>
-
-<% end %>
-
-<% if @comment.parent_id != nil %>
+  
+<% else %>
+  <%# update the new reply %>
   <%= turbo_stream.update "#{dom_id(@comment.parent)}_show_replies" do %>
-    <% @comment.parent.replies.order(created_at: :desc).each do |reply| %>
+    <% siblings_desc(@comment).each do |reply| %>
       <%= render partial: "shared/comment_short", locals: {pin: @pin, comment: reply} %>
     <% end %>
   <% end %>
 
+  <%# clear the add comment section %>
   <%= turbo_stream.update "#{dom_id(@comment.parent)}_new_reply", "" %>
 <% end %>
