--- a/app/views/comments/update.turbo_stream.erb
+++ b/app/views/comments/update.turbo_stream.erb
@@ -1,10 +1,4 @@
-<%= turbo_stream.update "#{dom_id(@comment)}_body" do %>
-  <div class="align-items-center">
-    <%= link_to user_path(@comment.user), data: {turbo_frame: "_top"}, class: "align-items-center" do %>
-      <%= render partial: "shared/user_avatar", locals: {user: @comment.user, size: 32} %>
-      <strong><%= @comment.user.email.truncate(15) %></strong>
-    <% end %>
-    <%= @comment.body.strip %>
-  </div>
+<%= turbo_stream.replace "#{dom_id(@comment)}_body" do %>
+  <%= render partial: "comments/comment_body", locals: { comment: @comment } %>
 <% end %>
 
