--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -254,6 +254,9 @@ nav a:hover {
   color: var(--color30);
   text-decoration: none;
 }
+footer {
+  text-align: center;
+}
 .home {
   color: white;
   background-color: var(--color30);
