Clean up comment views

--- a/app/views/likes/_like_count.html.erb
+++ b/app/views/likes/_like_count.html.erb
@@ -1,6 +1,3 @@
-<% count = likeable.likes.count %>
 <span>
-  <% if count > 0 %>
-    <%= pluralize(count, "like") %>
-  <% end %>
+  <%= likes_count(likeable) if likes_count(likeable).positive? %>
 </span>
