--- a/app/views/likes/_like_icon.html.erb
+++ b/app/views/likes/_like_icon.html.erb
@@ -1,5 +1,5 @@
-<% like = current_user.likes.find_by(likeable: likeable) %>
-<% if like == nil %>
+<% like = liked_by_current_user(likeable) %>
+<% if like.nil? %>
   <%= button_to likes_path, params: { like: { likeable_id: likeable.id, likeable_type: likeable.class.to_s } }, class: "like" do %>
     <i class="fa-regular fa-heart" style="color:#B197FC;"></i>
   <% end %>
