--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,11 @@
       </div>
     </main>
     <footer>
+      <br>
       <hr>
-      <p>&copy; <%= Time.now.year %> Thai Bui Hoang. Source Code on Github: <a href="https://github.com/thaibhoang/pinterest">https://github.com/thaibhoang/pinterest</a></p>
+      <p>&copy; <%= Time.now.year %> Thai Bui Hoang. Source Code on Github: 
+        <a href="https://github.com/thaibhoang/pinterest" target="_blank">https://github.com/thaibhoang/pinterest</a>
+      </p>
     </footer>
   </body>
 </html>
