--- a/app/views/saved/_board_thumbnail.html.erb
+++ b/app/views/saved/_board_thumbnail.html.erb
@@ -1,27 +1,12 @@
-  
 <div class="board_box" id="<%= dom_id(board) %>">
   <%= link_to user_board_path(user, board), data: { turbo_frame: "_top" } do %>
     <div class="box">
       <div class="board-cover">
-        <% if board.cover_url.present? %>
-          <%= image_tag(board.cover_url, style: 'height: 157px; width: 157px; object-fit: cover;', class: "board-thumbnail") %>
-        <% else %>
-          <% if board.cover.attached? %>
-            <%= image_tag(board.resize_fill_img(board.cover, 157, 157), class: "board-thumbnail") %>
-          <% else %>
-            <div class="img_place_holder"></div>
-          <% end %>
-        <% end %>
+        <%= render_board_thumbnail_image(board) %>
       </div>
 
-      <div class="bold"><%= board.name.strip.truncate(18) %></div>
-      <% if board.saved_pins.count > 0 %>
-        <div><%= pluralize(board.saved_pins.count, "pin") %></div>
-      <% else %>
-        <div>Currently empty</div>
-      <% end %>
+      <div class="bold"><%= truncated_board_name(board.name, 17) %></div>
+      <div><%= board_basic_detail(board) %></div>
     </div>
   <% end %>
 </div>
-
-    
